simplifying page, celaning up data pipelines

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,23 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#007AFF" />
-    <meta
-      name="description"
-      content="Weather vs Stock Market Correlator - Analyze correlations between weather patterns and stock market performance"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    
-    <!-- Google Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#ffffff" />
     <title>Weather vs Stock Market Correlator</title>
+    <link rel="manifest" href="/manifest.json" />
+    <link rel="icon" href="/Notion-Face-Portrait.ico" type="image/x-icon" />
+    <link rel="apple-touch-icon" href="/Notion-Face-Portrait.ico" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
